--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            No Painkiller For All In The Cloud
+title:            No Painkiller In Cloud
 tagline:          'Break it then fix it, but one at a time'
 description:      'Thouths on Virtualization, Storage, Networking, Open Source and Open Standard Operation'
 url:              http://hannibalhuang.github.io
