--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
 markdown:         redcarpet
-highlighter:      pygments
+highlighter:      rouge
 
 # Permalinks
 permalink:        pretty
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            No Painkiller In Cloud
 tagline:          'Break it then fix it, but one at a time'
-description:      'Thouthts on Virtualization, Storage, Networking, Open Source and Open Standard'
+description:      'Thoughts on Virtualization, Storage, Networking, Open Source and Open Standard'
 url:              http://hannibalhuang.github.io
 baseurl:          /
 
