improvements on urls and images

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            No Painkiller In Cloud
+title:            No Painkiller In Da Cloud
 tagline:          'Break it then fix it, but one at a time'
 description:      'Thoughts on Virtualization, Storage, Networking, Open Source and Open Standard'
 url:              http://hannibalhuang.github.io
